RESOLVED FIXED 178150
[Payment Request] Validate that all PaymentCurrencyAmounts use the same currency code when using Apple Pay
https://bugs.webkit.org/show_bug.cgi?id=178150
Summary [Payment Request] Validate that all PaymentCurrencyAmounts use the same curre...
Andy Estes
Reported 2017-10-10 17:55:25 PDT
[Payment Request] Validate that all PaymentCurrencyAmounts use the same currency code when using Apple Pay
Attachments
Patch (24.46 KB, patch)
2017-10-10 17:59 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2017-10-10 17:59:42 PDT
WebKit Commit Bot
Comment 2 2017-10-10 19:57:16 PDT
Comment on attachment 323366 [details] Patch Clearing flags on attachment: 323366 Committed r223163: <http://trac.webkit.org/changeset/223163>
WebKit Commit Bot
Comment 3 2017-10-10 19:57:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-10-10 19:58:35 PDT
Ryan Haddad
Comment 5 2017-10-11 08:54:56 PDT
This change broke the Sierra build: (view as text) /Volumes/Data/slave/sierra-release/build/Source/WebCore/Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:87:12: error: no viable conversion from returned value of type 'ApplePaySessionPaymentRequest::LineItem' to function return type 'ExceptionOr<ApplePaySessionPaymentRequest::LineItem>' /Volumes/Data/slave/sierra-release/build/Source/WebCore/Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:100:12: error: no viable conversion from returned value of type 'Vector<ApplePaySessionPaymentRequest::LineItem>' to function return type 'ExceptionOr<Vector<ApplePaySessionPaymentRequest::LineItem> >' /Volumes/Data/slave/sierra-release/build/Source/WebCore/Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:138:12: error: no viable conversion from returned value of type 'ApplePaySessionPaymentRequest::ShippingMethod' to function return type 'ExceptionOr<ApplePaySessionPaymentRequest::ShippingMethod>' https://build.webkit.org/builders/Apple%20Sierra%20Release%20%28Build%29/builds/5606
Andy Estes
Comment 6 2017-10-11 09:12:45 PDT
(In reply to Ryan Haddad from comment #5) > This change broke the Sierra build: > > (view as text) > /Volumes/Data/slave/sierra-release/build/Source/WebCore/Modules/applepay/ > paymentrequest/ApplePayPaymentHandler.cpp:87:12: error: no viable conversion > from returned value of type 'ApplePaySessionPaymentRequest::LineItem' to > function return type 'ExceptionOr<ApplePaySessionPaymentRequest::LineItem>' > /Volumes/Data/slave/sierra-release/build/Source/WebCore/Modules/applepay/ > paymentrequest/ApplePayPaymentHandler.cpp:100:12: error: no viable > conversion from returned value of type > 'Vector<ApplePaySessionPaymentRequest::LineItem>' to function return type > 'ExceptionOr<Vector<ApplePaySessionPaymentRequest::LineItem> >' > /Volumes/Data/slave/sierra-release/build/Source/WebCore/Modules/applepay/ > paymentrequest/ApplePayPaymentHandler.cpp:138:12: error: no viable > conversion from returned value of type > 'ApplePaySessionPaymentRequest::ShippingMethod' to function return type > 'ExceptionOr<ApplePaySessionPaymentRequest::ShippingMethod>' > > https://build.webkit.org/builders/Apple%20Sierra%20Release%20%28Build%29/ > builds/5606 Tried to fix in r223188: <https://trac.webkit.org/changeset/223188>
Note You need to log in before you can comment on or make changes to this bug.